--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,17 @@
 /*
 Common class for setting width
 ================================================ */
+#voice,
+#free-trail {
+  margin: auto;
+  max-width: 860px;
+}
+
+.inner {
+  max-width: 860px;
+  margin: auto;
+}
+
 /*
 COMMON
 ================================================ */
@@ -15,7 +26,7 @@ html {
 
 body {
   font-family: 游ゴシック体, YuGothic, "游ゴシック Medium", "Yu Gothic Medium", 游ゴシック, "Yu Gothic", メイリオ, sans-serif;
-  color: #000;
+  color: rgb(51, 51, 51);
 }
 
 img {
@@ -31,8 +42,79 @@ a {
   text-decoration: none;
 }
 
+/*-------------------------------------------
+#header
+-------------------------------------------*/
+#header {
+  padding: 0 50px;
+}
+
+/*-------------------------------------------
+#home
+-------------------------------------------*/
+#home {
+  background-color: tan;
+}
+
+/*-------------------------------------------
+#choice
+-------------------------------------------*/
+#choice {
+  background-color: orange;
+  text-align: center;
+}
+
+/*-------------------------------------------
+#online-native
+-------------------------------------------*/
+#online-native {
+  background-color: #FF2A2A;
+}
+
+/*-------------------------------------------
+#voice
+-------------------------------------------*/
+#voice {
+  background-color: gold;
+}
+
+/*-------------------------------------------
+#summary
+-------------------------------------------*/
+#summary {
+  background-color: tomato;
+}
+
+/*-------------------------------------------
+#free-trail
+-------------------------------------------*/
+#free-trail {
+  background-color: plum;
+}
+
+/*-------------------------------------------
+#footer
+-------------------------------------------*/
+#footer {
+  background-color: #E8E8E8;
+}
+
+/*-------------------------------------------
+
+-------------------------------------------*/
 /* レスポンシブ・ブレークポイント900px
 ------------------------------- */
+@media screen and (max-width: 900px) {
+  #home {
+    padding: 0 15px;
+  }
+  #header {
+    padding: 0 15px;
+  }
+  .inner {
+    padding: 0 15px;
+  }
+}
 /*-------------------------------------------
 
 -------------------------------------------*/
