--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 //** VARIABLES ================================= **//
-$mainColor: #000;  // 文字色
+$mainColor: rgb(51, 51, 51);  // 文字色
 $red: #FF2A2A;
 $gray: #E8E8E8;
 
@@ -15,6 +15,15 @@ $gray: #E8E8E8;
 /*
 Common class for setting width
 ================================================ */
+#voice,
+#free-trail {
+    margin: auto;
+    max-width: 860px;
+}
+.inner {
+    max-width: 860px;
+    margin: auto;
+}
 
 
 /*
@@ -41,8 +50,108 @@ a {
     text-decoration: none; 
 }
 
-/* レスポンシブ・ブレークポイント900px
-------------------------------- */
+
+
+/*-------------------------------------------
+#header
+-------------------------------------------*/
+#header {
+    padding: 0 50px;
+}
+/*-------------------------------------------
+#home
+-------------------------------------------*/
+#home {
+    background-color: tan;
+}
+
+/*-------------------------------------------
+#choice
+-------------------------------------------*/
+#choice {
+    background-color: orange;
+    text-align: center;
+}
+
+/*-------------------------------------------
+#online-native
+-------------------------------------------*/
+#online-native {
+    background-color: $red;
+}
+
+/*-------------------------------------------
+#voice
+-------------------------------------------*/
+#voice {
+    background-color: gold;
+}
+
+/*-------------------------------------------
+#summary
+-------------------------------------------*/
+#summary {
+    background-color: tomato;
+}
+
+/*-------------------------------------------
+#free-trail
+-------------------------------------------*/
+#free-trail {
+    background-color: plum;
+}
+
+/*-------------------------------------------
+#footer
+-------------------------------------------*/
+#footer {
+    background-color: $gray;
+}
+
+
+
 /*-------------------------------------------
 
 -------------------------------------------*/
+
+/* レスポンシブ・ブレークポイント900px
+------------------------------- */
+@media screen and (max-width: 900px) {
+    #home {
+        padding: 0 15px;
+    }
+    #header {
+        padding: 0 15px;
+    }
+    .inner {
+        padding: 0 15px;
+    }
+}
+/*-------------------------------------------
+
+-------------------------------------------*/
+
+
+
+
+
+
+
+
+
+// .flex-container {
+//     display: flex;
+//     flex-wrap: wrap; /* コンテンツが折り返されるようにする */
+// }
+
+// .flex-container li {
+//     width: 25%; /* 最初は1列に並ぶため、幅を100%に設定 */}
+
+// /* スマホモードの場合のスタイル */
+// @media (max-width: 900px) {
+//     .flex-container li {
+//         width: 50%; /* スマホモードでは2列に並ぶため、幅を50%に設定 */
+//     }
+// }
+
+
