--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ html {
 
 body {
   font-family: 游ゴシック体, YuGothic, "游ゴシック Medium", "Yu Gothic Medium", 游ゴシック, "Yu Gothic", メイリオ, sans-serif;
+  letter-spacing: 2px;
   color: rgb(51, 51, 51);
 }
 
@@ -42,18 +43,86 @@ a {
   text-decoration: none;
 }
 
+p {
+  text-align: left;
+}
+
+button {
+  background-color: #FF2A2A;
+}
+
+.section-title {
+  font-size: 2.25rem;
+  font-weight: 700;
+  display: inline-block;
+  position: relative;
+}
+.section-title::after {
+  position: absolute;
+  content: "";
+  bottom: -22px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 3px;
+  width: 100px;
+  background-color: rgb(51, 51, 51);
+}
+
 /*-------------------------------------------
 #header
 -------------------------------------------*/
 #header {
-  padding: 0 50px;
+  padding: 40px 0 0 50px;
+}
+#header .header-logo {
+  width: 100px;
 }
 
 /*-------------------------------------------
 #home
 -------------------------------------------*/
 #home {
-  background-color: tan;
+  height: 720px;
+  position: relative;
+}
+#home .home-title-contents {
+  position: absolute;
+  content: "";
+  top: 300px;
+  max-width: 100%;
+  padding: 0 10%;
+}
+#home .home-title-contents h2.page-title {
+  font-size: 2.875rem;
+  font-weight: 700;
+  text-shadow: 0 5px 5px #fff;
+}
+#home .home-title-contents button {
+  color: #fff;
+  font-size: 1.5rem;
+  display: block;
+  width: 100%;
+  padding: 13px 50px;
+  margin-top: 33px;
+  border-bottom: 6px solid #9A0413;
+  border-radius: 10px;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+  position: relative;
+}
+#home .home-title-contents button::after {
+  position: absolute;
+  content: "";
+  top: 26px;
+  right: 30px;
+  width: 16px;
+  height: 16px;
+  border-top: 3px solid #fff;
+  border-right: 3px solid #fff;
+  transform: rotate(45deg);
+}
+#home .home-title-contents button:hover {
+  transform: scale(1.07); /* ホバー時にサイズを105%に */
+  opacity: 0.9;
 }
 
 /*-------------------------------------------
@@ -62,6 +131,7 @@ a {
 #choice {
   background-color: orange;
   text-align: center;
+  padding: 80px 0;
 }
 
 /*-------------------------------------------
@@ -69,27 +139,192 @@ a {
 -------------------------------------------*/
 #online-native {
   background-color: #FF2A2A;
+  padding: 60px 0;
+}
+#online-native .online-native-left,
+#online-native .online-native-right {
+  width: 100%;
+  display: flex;
+}
+#online-native .online-native-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  background-color: #fff;
+  padding: 5% 0;
+  margin: 20px 0;
+}
+#online-native .online-native-items:nth-of-type(1) {
+  border-radius: 0 20px 20px 0;
+}
+#online-native .online-native-items:nth-of-type(2) {
+  border-radius: 20px 0 0 20px;
+}
+#online-native .online-native-items .online-native-item {
+  display: flex;
+  flex-direction: column;
+}
+#online-native .online-native-items img {
+  margin-right: 30px;
+  height: 63px;
+}
+#online-native .online-native-items h4 {
+  font-size: 1.75rem;
+  font-weight: 700;
+  color: #FF2A2A;
+}
+#online-native .online-native-items p {
+  font-size: 1.125rem;
+}
+#online-native .fifty {
+  width: 50%;
 }
 
 /*-------------------------------------------
 #voice
 -------------------------------------------*/
 #voice {
-  background-color: gold;
+  text-align: center;
+  padding: 120px 0;
+}
+#voice .voice-contents {
+  margin-top: 100px;
+}
+#voice .voice-contents .profile {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  align-items: start;
+  margin-top: 72px;
+  width: 100%;
+}
+#voice .voice-contents .profile:nth-of-type(2) {
+  flex-direction: row-reverse;
+  justify-content: end;
+}
+#voice .voice-contents .profile:nth-of-type(2) .profile-text:nth-of-type(2)::after {
+  left: auto;
+  right: -10px;
+}
+#voice .voice-contents .profile .profile-img {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+#voice .voice-contents .profile .profile-img img {
+  background-color: #CCCCCC;
+  border-radius: 50%;
+  height: 120px;
+  margin-bottom: 10px;
+}
+#voice .voice-contents .profile .profile-img span {
+  font-size: 0.75rem;
+}
+#voice .voice-contents .profile .profile-text {
+  background-color: #E9F1FB;
+  width: 60%;
+  border-radius: 15px;
+  padding: 22px 20px;
+  margin: 0 25px;
+  position: relative;
+}
+#voice .voice-contents .profile .profile-text::after {
+  position: absolute;
+  content: "";
+  top: 90px;
+  left: -10px;
+  height: 20px;
+  width: 20px;
+  transform: rotate(45deg);
+  background-color: #E9F1FB;
+}
+#voice .voice-contents .profile .profile-text p {
+  text-align: justify;
+  letter-spacing: 1.5px;
 }
 
 /*-------------------------------------------
 #summary
 -------------------------------------------*/
 #summary {
-  background-color: tomato;
+  background-color: #E8E8E8;
+  text-align: center;
+  padding: 60px 0;
+}
+#summary .summary-items {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-content: space-between;
+  margin-top: 100px;
+}
+#summary .summary-items .summary-item {
+  width: 48%;
+  border-radius: 20px;
+  background-color: #fff;
+  padding: 55px 60px 62px 60px;
+  margin-bottom: 30px;
+}
+#summary .summary-items .summary-item:nth-of-type(3) {
+  margin-bottom: 0;
+}
+#summary .summary-items .summary-item:nth-of-type(4) {
+  margin-bottom: 0;
+}
+#summary .summary-items .summary-item h4 {
+  display: flex;
+  flex-direction: column;
+}
+#summary .summary-items .summary-item h4 .ja {
+  font-size: 1.75rem;
+  line-height: 28px;
+  font-weight: 700;
+}
+#summary .summary-items .summary-item h4 .en {
+  font-size: 1.125rem;
+  line-height: 18px;
+  font-weight: 700;
+  margin-top: 15px;
+}
+#summary .summary-items .summary-item p {
+  margin-top: 30px;
 }
 
 /*-------------------------------------------
 #free-trail
 -------------------------------------------*/
 #free-trail {
-  background-color: plum;
+  text-align: center;
+  padding: 123px 0 120px;
+}
+#free-trail .section-title {
+  font-size: 2rem;
+}
+#free-trail .section-title::after {
+  content: none;
+}
+#free-trail p {
+  text-align: center;
+  font-size: 1.125rem;
+  margin-top: 5px;
+}
+#free-trail button {
+  color: #fff;
+  font-size: 1.75rem;
+  font-weight: 700;
+  width: 100%;
+  padding: 15px 0;
+  margin-top: 45px;
+  border-radius: 47px;
+  border: 3px solid #FF2A2A;
+  transition: all 0.4s;
+}
+#free-trail button:hover {
+  color: #FF2A2A;
+  background-color: #fff;
+  border: 3px solid #FF2A2A;
 }
 
 /*-------------------------------------------
@@ -97,24 +332,44 @@ a {
 -------------------------------------------*/
 #footer {
   background-color: #E8E8E8;
+  padding: 20px 0;
+}
+#footer .footer-items {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 40px 0;
+}
+#footer .footer-items .footer-item {
+  width: 25%;
+}
+#footer .footer-items .footer-item h4 {
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+#footer .footer-items .footer-item li {
+  margin: 3px 0 0 10px;
+}
+#footer .footer-items .footer-item li a {
+  color: rgb(51, 51, 51);
+  font-size: 0.875rem;
+  transition: opacity 0.5s;
+}
+#footer .footer-items .footer-item li a:hover {
+  opacity: 0.6;
+}
+#footer .copy {
+  text-align: center;
+  font-size: 0.625rem;
 }
 
-/*-------------------------------------------
-
--------------------------------------------*/
 /* レスポンシブ・ブレークポイント900px
 ------------------------------- */
 @media screen and (max-width: 900px) {
-  #home {
-    padding: 0 15px;
-  }
-  #header {
-    padding: 0 15px;
-  }
+  #home,
+  #header,
+  #free-trail,
   .inner {
     padding: 0 15px;
   }
 }
-/*-------------------------------------------
-
--------------------------------------------*/
