--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,7 +36,8 @@ html {
     font-size: 100%; 
 }
 body { 
-    font-family: 游ゴシック体, YuGothic, "游ゴシック Medium", "Yu Gothic Medium", 游ゴシック, "Yu Gothic", メイリオ, sans-serif; 
+    font-family: 游ゴシック体, YuGothic, "游ゴシック Medium", "Yu Gothic Medium", 游ゴシック, "Yu Gothic", メイリオ, sans-serif;
+    letter-spacing: 2px;
     color: $mainColor; 
 }
 img { 
@@ -49,20 +50,89 @@ li {
 a { 
     text-decoration: none; 
 }
-
-
-
+p {
+    text-align: left;
+}
+button {
+    background-color: $red;
+}
+.section-title {
+    font-size: 2.25rem;
+    font-weight: 700;
+    display: inline-block;
+    position: relative;   
+    &::after {
+        position: absolute;
+        content: "";
+        bottom: -22px;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 3px;
+        width: 100px;
+        background-color: $mainColor;
+    }  
+}
 /*-------------------------------------------
 #header
 -------------------------------------------*/
 #header {
-    padding: 0 50px;
+    padding: 40px 0 0 50px ;
+
+    .header-logo {
+        width: 100px;
+    }
 }
+
 /*-------------------------------------------
 #home
 -------------------------------------------*/
 #home {
-    background-color: tan;
+    height: 720px;
+    position: relative;
+
+    .home-title-contents {
+        position: absolute;
+        content: "";
+        top: 300px;
+        max-width: 100%;
+        padding: 0 10%;
+
+        h2.page-title {
+           font-size: 2.875rem; 
+           font-weight: 700;
+           text-shadow: 0 5px 5px #fff;          
+        }
+
+        button {
+            color: #fff;
+            font-size: 1.5rem;
+            display: block;
+            width: 100%;
+            padding: 13px 50px;
+            margin-top: 33px;
+            border-bottom: 6px solid #9A0413;
+            border-radius:10px;
+            transition: transform .3s ease, opacity .3s ease;
+            position: relative;
+
+            &::after {
+                position: absolute;
+                content: "";
+                top: 26px;
+                right: 30px;
+                width: 16px;
+                height: 16px;
+                border-top: 3px solid #fff;
+                border-right: 3px solid #fff;
+                transform: rotate(45deg);
+            }
+
+            &:hover {
+                transform: scale(1.07); /* ホバー時にサイズを105%に */
+                opacity: 0.9;
+            }
+        }
+    }
 }
 
 /*-------------------------------------------
@@ -71,6 +141,7 @@ a {
 #choice {
     background-color: orange;
     text-align: center;
+    padding: 80px 0;
 }
 
 /*-------------------------------------------
@@ -78,27 +149,203 @@ a {
 -------------------------------------------*/
 #online-native {
     background-color: $red;
+    padding: 60px 0;
+
+    .online-native-left,
+    .online-native-right {        
+        width: 100%;
+        display: flex;
+    }
+
+    .online-native-items {
+        @include flexMode(center);
+        width: 50%;
+        background-color: #fff;
+        padding: 5% 0;
+        margin: 20px 0;        
+        &:nth-of-type(1) {
+            border-radius: 0 20px 20px 0;
+        }
+        &:nth-of-type(2) {
+            border-radius: 20px 0 0 20px;
+        }
+
+        .online-native-item {
+            display: flex;
+            flex-direction: column;
+        }
+
+        img {
+            margin-right: 30px;
+            height: 63px;
+        }
+        h4 {
+            font-size: 1.75rem;
+            font-weight: 700;
+            color: $red;
+        }
+        p {
+            font-size: 1.125rem;
+        }
+    }
+    .fifty {
+        width: 50%;
+    }
 }
 
 /*-------------------------------------------
 #voice
 -------------------------------------------*/
 #voice {
-    background-color: gold;
+    text-align: center;
+    padding: 120px 0;
+
+    .voice-contents {
+        margin-top: 100px;
+
+        .profile {
+            @include flexMode(start);
+            align-items: start;
+            margin-top: 72px;            
+            width: 100%;
+            &:nth-of-type(2) {
+                flex-direction: row-reverse;
+                justify-content: end;
+                .profile-text:nth-of-type(2)::after {                   
+                    left: auto;
+                    right: -10px;                    
+                }
+            }
+    
+            .profile-img {
+                @include flexMode(space-between);
+                flex-direction: column;    
+                img {
+                    background-color: #CCCCCC;
+                    border-radius: 50%;
+                    height: 120px;
+                    margin-bottom: 10px;                    
+                }
+                span {
+                    font-size: 0.75rem;
+                }
+            }
+    
+            .profile-text {
+                background-color: #E9F1FB;
+                width: 60%;
+                border-radius: 15px;
+                padding: 22px 20px;
+                margin: 0 25px;
+                position: relative;
+                &::after {
+                    position: absolute;
+                    content: "";
+                    top: 90px;                    
+                    left: -10px;
+                    height: 20px;
+                    width: 20px;
+                    transform: rotate(45deg);
+                    background-color: #E9F1FB;    
+                }    
+                p {
+                    text-align: justify;
+                    letter-spacing: 1.5px;
+                }
+            }
+        }
+    }    
 }
 
 /*-------------------------------------------
 #summary
 -------------------------------------------*/
 #summary {
-    background-color: tomato;
+    background-color: $gray;
+    text-align: center;
+    padding: 60px 0;
+
+
+    .summary-items {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        align-content: space-between;
+        margin-top: 100px;        
+
+        .summary-item {
+            width: 48%;
+            border-radius: 20px;
+            background-color: #fff;
+            padding: 55px 60px 62px 60px;
+            margin-bottom: 30px;
+            &:nth-of-type(3) {
+                margin-bottom: 0;
+            }
+            &:nth-of-type(4) {
+                margin-bottom: 0;
+            }
+
+            h4 {
+                display: flex;
+                flex-direction: column;
+
+                .ja {
+                    font-size: 1.75rem;
+                    line-height: 28px;
+                    font-weight: 700;
+                }
+                .en {
+                    font-size: 1.125rem;
+                    line-height: 18px;
+                    font-weight: 700;
+                    margin-top: 15px;
+                }
+            }
+
+            p {
+                margin-top: 30px;
+            }
+        }
+    }
 }
 
 /*-------------------------------------------
 #free-trail
 -------------------------------------------*/
 #free-trail {
-    background-color: plum;
+    text-align: center;
+    padding: 123px 0 120px;
+
+    .section-title {        
+        font-size: 2rem;
+        &::after {            
+            content: none;
+        }
+    }
+
+    p {
+        text-align: center;
+        font-size: 1.125rem;
+        margin-top: 5px;
+    }
+
+    button {
+        color: #fff;
+        font-size: 1.75rem;
+        font-weight: 700;
+        width: 100%;
+        padding: 15px 0;
+        margin-top: 45px;
+        border-radius: 47px;
+        border: 3px solid $red;
+        transition: all 0.4s;
+        &:hover {
+            color: $red;
+            background-color: #fff;
+            border: 3px solid $red;
+        }
+    }
 }
 
 /*-------------------------------------------
@@ -106,52 +353,51 @@ a {
 -------------------------------------------*/
 #footer {
     background-color: $gray;
+    padding: 20px 0;
+
+    .footer-items {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 40px 0;
+
+        .footer-item {
+            width: 25%;
+
+            h4 {
+                font-weight: 700;
+                margin-bottom: 10px;
+            }
+
+            li {
+                margin: 3px 0 0 10px;
+
+                a {
+                    color: $mainColor;
+                    font-size: 0.875rem;
+                    transition: opacity 0.5s;
+                    &:hover {
+                        opacity: 0.6;
+                    }
+                }
+            }
+        }
+    }
+
+    .copy {
+        text-align: center;
+        font-size: 0.625rem;
+    }
 }
-
-
-
-/*-------------------------------------------
-
--------------------------------------------*/
 
 /* レスポンシブ・ブレークポイント900px
 ------------------------------- */
 @media screen and (max-width: 900px) {
-    #home {
-        padding: 0 15px;
-    }
-    #header {
-        padding: 0 15px;
-    }
+    #home,
+    #header,
+    #free-trail,
     .inner {
         padding: 0 15px;
-    }
+    }    
 }
-/*-------------------------------------------
-
--------------------------------------------*/
-
-
-
-
-
-
-
-
-
-// .flex-container {
-//     display: flex;
-//     flex-wrap: wrap; /* コンテンツが折り返されるようにする */
-// }
-
-// .flex-container li {
-//     width: 25%; /* 最初は1列に並ぶため、幅を100%に設定 */}
-
-// /* スマホモードの場合のスタイル */
-// @media (max-width: 900px) {
-//     .flex-container li {
-//         width: 50%; /* スマホモードでは2列に並ぶため、幅を50%に設定 */
-//     }
-// }
-
 
