--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,7 @@ button {
   background-color: #fff;
   padding: 5% 0;
   margin: 20px 0;
+  opacity: 0;
 }
 #online-native .online-native-items:nth-of-type(1) {
   border-radius: 0 20px 20px 0;
@@ -251,6 +252,7 @@ button {
   align-items: start;
   margin-top: 72px;
   width: 100%;
+  opacity: 0; /* JavaScriptのアニメーションで表示される */
 }
 #voice .voice-contents .profile:nth-of-type(2) {
   flex-direction: row-reverse;
