--- a/sass/style.scss
+++ b/sass/style.scss
@@ -72,6 +72,133 @@ button {
         background-color: $mainColor;
     }
 }
+/*
+メニュー
+================================================ */
+/* 開閉ボタン */
+#menu-open {
+    position: relative;
+    position: fixed;
+    right: 0;
+    top: 0;
+    height: 100px;
+    width: 100px;
+    z-index: 9999;
+    transition: opacity .3s ease-in-out;
+
+    &:hover {
+        opacity: 0.7;
+    }
+    /*-------------------------------------------
+    ハンバーガーメニューのアイコン線
+    -------------------------------------------*/
+    span {
+        display: inline-block;
+        position: absolute;
+        left: 25%;
+        right: 25px;
+        background-color: #fff;
+        height: 2px;
+        max-width: 100%;
+        transition: all 0.3s ease-in-out;
+    }
+    /* 平時の位置 */
+    span:nth-of-type(1) {
+        top: 35px;
+    }
+    span:nth-of-type(2) {
+        top: 50px;
+    }
+    span:nth-of-type(3) {
+        top: 65px;
+    }
+
+    /* クリック時に横アイコンが斜めになる */
+    &.active span:nth-of-type(1) {
+        top: 40px;
+        transform: translateY(6px) rotate(-45deg);
+        max-width: 50%;
+    }
+    &.active span:nth-of-type(2),
+    &.active span:nth-of-type(3) {
+        top: 40px;
+        transform: translateY(6px) rotate(45deg);
+        max-width: 50%;
+    }
+}
+
+/* スライドメニューパネル */
+nav {
+    text-align: center;
+
+    #menu-panel {
+        position: relative;
+        position: fixed;
+        z-index: 9;
+        inset: 0;
+        background-color: $red;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity .7s, visibility .7s;
+
+        .slide-logo {
+            width: 100px;
+            position: absolute;
+            content: "";
+            top: 40px;
+            left: 50px;
+        }
+
+        .menu-list {
+            margin-top: 80px;
+
+            li {
+                margin-bottom: 20px;
+            }
+            a {
+                color: #fff;
+                font-weight: 700;
+            }
+        }
+
+        /* パネル内のボタン */
+        button {
+            color: #fff;
+            font-weight: 700;
+            letter-spacing: 1.5px;
+            margin-top: 20px;
+            border: 1px solid #fff;
+            padding: 15px 50px;
+            transition: all .5s;
+            position: relative;
+
+            /* 右と下の罫線 */
+            &::after {
+                position     : absolute;
+                content      : "";
+                bottom       : -6px;
+                left         : 6px;
+                width        : 100%;
+                height       : 100%;
+                border-right : 1px solid #fff;
+                border-bottom: 1px solid #fff;
+            }
+
+            /* ホバー時の白色背景 */
+            &:hover {
+                color: $red;
+                background-color: #fff;
+            }
+        }
+    }
+}
+/* ナビ表示・クラスリストトグル */
+#menu-panel.display {
+    opacity: 1;
+    visibility: visible; /* 要素を表示 */
+}
+
+
 /*-------------------------------------------
 #header
 -------------------------------------------*/
@@ -326,7 +453,6 @@ button {
 /*-------------------------------------------
 #summary
 -------------------------------------------*/
-
 #summary {
     background: url("../images/bg.gif") repeat;
     text-align: center;
